--- a/src/main/resources/form.html
+++ b/src/main/resources/form.html
@@ -2,41 +2,79 @@
 <html lang="es">
 <head>
     <meta charset="utf-8">
-    <title>Formulario de Validaciones</title>
+    <title>Formulario con Carrusel</title>
 
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 
     <style>
         body {
-          font-family: Arial, sans-serif;
-          background: linear-gradient(135deg, #667eea, #764ba2);
-          min-height: 100vh;
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          margin: 0;
+            font-family: Arial, sans-serif;
+            background: linear-gradient(135deg, #667eea, #764ba2);
+            min-height: 100vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin: 0;
         }
+
         .card {
-          background: #fff;
-          padding: 30px;
-          border-radius: 12px;
-          width: 400px;
-          box-shadow: 0 10px 25px rgba(0,0,0,.2);
+            background: #fff;
+            padding: 30px;
+            border-radius: 12px;
+            width: 420px;
+            box-shadow: 0 10px 25px rgba(0,0,0,.2);
         }
+
         h2 { text-align: center; }
+
         label { font-weight: bold; }
+
         input {
-          width: 100%;
-          padding: 10px;
-          margin-bottom: 15px;
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 12px;
         }
+
         button {
-          width: 100%;
-          padding: 12px;
-          background: #667eea;
-          color: white;
-          border: none;
-          cursor: pointer;
+            width: 100%;
+            padding: 12px;
+            background: #667eea;
+            color: white;
+            border: none;
+            cursor: pointer;
+        }
+
+        /* 🎠 Carrusel */
+        .carousel {
+            position: relative;
+            width: 100%;
+            height: 200px;
+            overflow: hidden;
+            border-radius: 10px;
+            margin-bottom: 15px;
+            background: #eee;
+        }
+
+        .carousel img {
+            width: 100%;
+            height: 200px;
+            object-fit: cover;
+            display: none;
+        }
+
+        .carousel img.active {
+            display: block;
+        }
+
+        .controls {
+            display: flex;
+            justify-content: space-between;
+            margin-bottom: 10px;
+        }
+
+        .controls button {
+            width: 48%;
+            background: #764ba2;
         }
     </style>
 </head>
@@ -45,7 +83,7 @@
 <div class="card">
     <h2>Formulario de Prueba</h2>
 
-    <form method="post" action="/enviar">
+    <form method="post" action="/enviar" enctype="multipart/form-data">
 
         <label>Nombre</label>
         <input name="nombre" required>
@@ -62,6 +100,18 @@
         <label>Fecha</label>
         <input type="date" name="fecha" required>
 
+        <!-- 📸 Subir imágenes -->
+        <label>Subir imágenes</label>
+        <input type="file" multiple accept="image/*" id="imagenes">
+
+        <!-- 🎠 Carrusel -->
+        <div class="carousel" id="carousel"></div>
+
+        <div class="controls">
+            <button type="button" onclick="prev()">⬅ Anterior</button>
+            <button type="button" onclick="next()">Siguiente ➡</button>
+        </div>
+
         <!-- 🔐 reCAPTCHA -->
         <div class="g-recaptcha"
              data-sitekey="6LfKmVksAAAAAMcJpFnwcm0dX79e5GZZ_FkElcDj"></div>
@@ -70,6 +120,49 @@
         <button type="submit">Enviar</button>
     </form>
 </div>
+
+<script>
+    const input = document.getElementById('imagenes');
+    const carousel = document.getElementById('carousel');
+    let images = [];
+    let index = 0;
+
+    input.addEventListener('change', () => {
+        carousel.innerHTML = '';
+        images = [];
+
+        [...input.files].forEach((file, i) => {
+            const reader = new FileReader();
+            reader.onload = e => {
+                const img = document.createElement('img');
+                img.src = e.target.result;
+                if (i === 0) img.classList.add('active');
+                carousel.appendChild(img);
+                images.push(img);
+            };
+            reader.readAsDataURL(file);
+        });
+
+        index = 0;
+    });
+
+    function showImage(i) {
+        images.forEach(img => img.classList.remove('active'));
+        images[i].classList.add('active');
+    }
+
+    function next() {
+        if (!images.length) return;
+        index = (index + 1) % images.length;
+        showImage(index);
+    }
+
+    function prev() {
+        if (!images.length) return;
+        index = (index - 1 + images.length) % images.length;
+        showImage(index);
+    }
+</script>
 
 </body>
 </html>
