Limpia build y gradle, actualiza rutas y formulario

--- a/src/main/resources/form.html
+++ b/src/main/resources/form.html
@@ -68,7 +68,7 @@
     let fondos = [];
     let index = 0;
 
-    // 🔄 Cargar imágenes guardadas del servidor
+    // 🔄 cargar imágenes guardadas
     fetch('/imagenes')
         .then(res => res.json())
         .then(data => {
