--- a/src/main/resources/form.html
+++ b/src/main/resources/form.html
@@ -102,6 +102,7 @@
 <!-- 🔥 MENU -->
 <div class="menu">
     <button onclick="mostrarFormulario()">📋 Formulario</button>
+    <button onclick="mostrarformulario()"> Prueba </button>
 </div>
 
 <!-- CONTENIDO ABAJO -->
