Limpia build y gradle, actualiza rutas y formulario

--- a/src/main/resources/form.html
+++ b/src/main/resources/form.html
@@ -102,7 +102,7 @@
 <!-- 🔥 MENU -->
 <div class="menu">
     <button onclick="mostrarFormulario()">📋 Formulario</button>
-    <button onclick="mostrarformulario()"> Prueba </button>
+    <button onclick="mostrarFormu()"> Prueba </button>
 </div>
 
 <!-- CONTENIDO ABAJO -->
