Limpia build y gradle, actualiza rutas y formulario

--- a/src/main/resources/form.html
+++ b/src/main/resources/form.html
@@ -114,7 +114,8 @@
                  data-sitekey="6LezqGgsAAAAAHS8EPhxOi1WRM1YZBdV4IPMzxm8">
             </div>
 
-            <button>Enviar</button>
+            <button type="submit">Enviar</button>
+
 
         </form>
 
